# opengl-hello-triangle

./: CMakeLists.txt
include/: game.hpp
shaders/: frag.glsl  vert.glsl
src/: main.cpp
